--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -13,7 +13,7 @@
   }
   @media (max-width: 600px){
     .carousel{
-      top: 50px;
+      height: 300px;
     }
     .section{
       top: 100px;
