--- a/src/Containers/Menubar/Mainheader/MainHeader.css
+++ b/src/Containers/Menubar/Mainheader/MainHeader.css
@@ -6,14 +6,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: #2b3144;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
+    background: #032041;
     padding: 0 1rem;
     z-index: 5;
   }
   
   main {
-    margin-top: 5rem;
+    margin-top: 4rem;
   }
   
   @media (min-width: 768px) {
