--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -14,37 +14,12 @@
       height: 300px;
     }
   }
-
-  .carousel .control-dots {
-    position: absolute;
-    bottom: 0;
-    margin: 0 0;
-    padding: 0;
-    text-align: center;
-    width: 100%; 
+  .posts{
+    background: #032041;
+    color: white;
   }
-    @media (min-width: 960px) {
-      .carousel .control-dots {
-        bottom: 0;
-      } 
-      }
-    .carousel .control-dots .dot {
-      -webkit-transition: opacity 0.25s ease-in;
-      -moz-transition: opacity 0.25s ease-in;
-      -ms-transition: opacity 0.25s ease-in;
-      -o-transition: opacity 0.25s ease-in;
-      transition: opacity 0.25s ease-in;
-      opacity: 0.3;
-      filter: alpha(opacity=30);
-      background: #fff;
-      width:5%;
-      height: 5px;
-      cursor: pointer;
-      display: inline-block;
-      border-radius: 0% !important;
-      outline: none;
-      margin: 0px;
-      }
-      .carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
-        opacity: 1;
-        filter: alpha(opacity=100); }
+  .container.hero{
+    background: #032041;
+    height: 50vh;
+    margin-top: 20px;
+  }
