--- a/src/Containers/Menubar/MainNavigation/MainNavigation.css
+++ b/src/Containers/Menubar/MainNavigation/MainNavigation.css
@@ -9,7 +9,9 @@
     margin-right: 2rem;
     cursor: pointer;
   }
-  
+  .text-left.mt-2.pl-4{
+    color: white;
+  }
   .main-navigation__menu-btn span {
     display: block;
     width: 2.1rem;
@@ -92,16 +94,14 @@
     display: block;
     padding: 10px 10px;
     margin:0;
-    border-top: 1px solid grey;
+   
   }
 
-  .SideDrawer.Open .nav-links li:last-child{
-    border-bottom: 1px solid grey;
-  }
+ 
   .SideDrawer.Open .nav-links li a,
   .SideDrawer.Open .nav-links li button{
     border:none;
-    color: #000;
+    color: white;
     padding: .5rem 1rem;
     font-weight: 600;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
