--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -1,5 +1,8 @@
 .news{
-    height: 50vh;
-    padding-top: 50px;
-    background: whitesmoke;
+    padding-top: 70px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 0px 0px;
+}
+.container{
+    margin-top: 100px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 0px 0px;
 }
