--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -1,3 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    width: 100%;
+}
+@media (max-width: 600px){
+    .news{
+        width: 100%;
+        overflow-x: hidden;
+        overflow-y: hidden;
+    }
+  }
 .news{
     padding-top: 70px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 0px 0px;
