--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -15,6 +15,10 @@ body{
 .news{
     padding-top: 70px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 0px 0px;
+    outline: 0;
+}
+.news:active {
+    outline: 0;
 }
 .container{
     margin-top: 100px;
